study: bootstrap.html badge

--- a/bootstrap.html
+++ b/bootstrap.html
@@ -175,6 +175,9 @@
                             고객문의
                         </a>
                     </li>
+                    <li style="padding-bottom: 10px;" class="nav-item dropdown">
+                        <span class="badge rounded-pill text-bg-warning">About us</span>
+                    </li>
                 </ul>
             </div>
         </div>
